--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,14 @@ body {
     text-wrap: balance;
   }
 }
+
+/* Hide number input spinners */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
